app/assets/stylesheets/components/_red_sheet.sass
[data-component="red sheet"]
  position: absolute
  top: 0
  left: 0
  right: 0
  bottom: 0
  background: $primary-color
  color: white
  text-align: center
  opacity: 0
  pointer-events: none
  transition: opacity 0.25s

  input[type="submit"]
    +button-color(darken($primary-color, 5%))

  textarea + input[type="submit"]
    +button-size(1.5)
    +button-color($primary-color)

  label
    display: inline-block
    vertical-align: middle
    margin-right: 10px

  p
    text-align: left

  textarea
    background: rgba(255, 255, 255, 0.1)
    color: white
    border: none
    font-size: 1.2rem
    margin: $space auto
    width: 100%
    padding:
      left: 15px
      right: 15px

    &:focus
      outline: none
      box-shadow: none
      background: white
      color: $default-font-color

    +gt($tablet)
      max-width: 600px
      min-height: 30vh

    +gt($tablet-landscape)
      max-width: 1000px

  &.show
    pointer-events: auto
    opacity: 1

  .close
    background: transparent
    border: 0px
    color: white
    font-size: 5rem
    position: absolute
    top: $space
    right: $space
    font-weight: 100

    &:hover
      box-shadow: none
      border: 0
      color: map-get($colors, yellow)

